gke_ingress_lb/gke_ingress_lb_mux/fe-srv-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fe-srv-ingress
  labels:
    type: fe-srv
  annotations:
    service.alpha.kubernetes.io/app-protocols: '{"fe":"HTTP2"}'
spec:
  type: NodePort 
  ports:
  - name: fe
    port: 50051
    protocol: TCP
    targetPort: 50051       
  selector:
    app: fe
