gke_ingress_lb/gke_ingress_lb_mux/fe-ilb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fe-ilb-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "gce-internal"
     
spec:
  tls:
  - secretName: fe-secret
  backend:
    serviceName: fe-srv-ingress
    servicePort: 50051
